tests/baselines/reference/commentOnClassAccessor1.errors.txt
tests/cases/compiler/commentOnClassAccessor1.ts(5,7): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/commentOnClassAccessor1.ts (1 errors) ====
    class C {
      /**
       * @type {number}
       */
      get bar(): number { return 1;}
          ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }